--- a/package.json
+++ b/package.json
@@ -1,19 +1,25 @@
 {
-  "name": "qd-hc",
-  "version": "1.0.0",
-  "description": "framework for running quality diversity study",
-  "main": "index.ts",
-  "scripts": {
-    "start": "python server.py",
-    "build": "tsc --project ./ ",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Nick Osborn + Seth Cooper",
-  "license": "ISC",
-  "devDependencies": {
-    "typescript": "^4.5.5"
-  },
-  "dependencies": {
-    "express": "^4.17.2"
-  }
+    "name": "qd-hc",
+    "version": "1.0.0",
+    "description": "framework for running quality diversity study",
+    "private": "true",
+    "scripts": {
+        "start": "nodemon ./server.js",
+        "build": "tsc --esModuleInterop ./server.ts && npx webpack --config webpack.config.js",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "author": "Nick Osborn + Seth Cooper",
+    "license": "ISC",
+    "devDependencies": {
+        "@types/express": "^4.17.13",
+        "@types/node": "^17.0.18",
+        "nodemon": "^2.0.15",
+        "ts-loader": "^9.2.6",
+        "typescript": "^4.5.5",
+        "webpack": "^5.69.0",
+        "webpack-cli": "^4.9.2"
+    },
+    "dependencies": {
+        "express": "^4.17.2"
+    }
 }
