--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,11 @@
 {
     "compilerOptions": {
-        "target": "es6",
-        "rootDir": "./",
-        "outDir": "./build",
         "esModuleInterop": true,
+        "target": "es5",
+        "module": "es6",
+        "rootDir": "./",
+        "outDir": "./dist/",
+        "moduleResolution": "node",
         "strict": true
     }
 }
