--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "compilerOptions": {
         "esModuleInterop": true,
+        "sourceMap": true,
         "target": "es5",
         "module": "es6",
         "rootDir": "./",
