--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "devDependencies": {
         "@types/express": "^4.17.13",
         "@types/node": "^17.0.18",
+        "html-webpack-plugin": "^5.5.0",
         "nodemon": "^2.0.15",
         "ts-loader": "^9.2.6",
         "typescript": "^4.5.5",
