--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "devDependencies": {
         "@types/express": "^4.17.13",
         "@types/node": "^17.0.18",
+        "css-loader": "^6.6.0",
         "html-webpack-plugin": "^5.5.0",
         "nodemon": "^2.0.15",
+        "style-loader": "^3.3.1",
         "ts-loader": "^9.2.6",
         "typescript": "^4.5.5",
         "webpack": "^5.69.0",
