--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "webpack-cli": "^4.9.2"
     },
     "dependencies": {
+        "color-interpolate": "^1.0.5",
         "express": "^4.17.2"
     }
 }
