--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
     "description": "framework for running quality diversity study",
     "private": "true",
     "scripts": {
-        "dev": "nodemon ./server.js",
-        "prod": "export NODE_ENV=prod node ./server.js",
-        "build": "tsc --esModuleInterop ./server.ts && npx webpack --config webpack.config.js",
+        "start": "nodemon ./server.js",
+        "dev": "tsc --esModuleInterop ./server.ts && npx webpack --config webpack.dev.js",
+        "prod": "tsc --esModuleInterop ./server.ts && npx webpack --config webpack.prod.js",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "Nick Osborn + Seth Cooper",
@@ -21,7 +21,8 @@
         "ts-loader": "^9.2.6",
         "typescript": "^4.5.5",
         "webpack": "^5.69.0",
-        "webpack-cli": "^4.9.2"
+        "webpack-cli": "^4.9.2",
+        "webpack-merge": "^5.8.0"
     },
     "dependencies": {
         "color-interpolate": "^1.0.5",
