--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "framework for running quality diversity study",
     "private": "true",
     "scripts": {
-        "start": "nodemon ./server.js",
+        "start": "node ./server.js",
         "dev": "tsc --esModuleInterop ./server.ts && npx webpack --config webpack.dev.js",
         "prod": "tsc --esModuleInterop ./server.ts && npx webpack --config webpack.prod.js",
         "test": "echo \"Error: no test specified\" && exit 1"
@@ -16,7 +16,6 @@
         "@types/node": "^17.0.18",
         "css-loader": "^6.6.0",
         "html-webpack-plugin": "^5.5.0",
-        "nodemon": "^2.0.15",
         "style-loader": "^3.3.1",
         "ts-loader": "^9.2.6",
         "typescript": "^4.5.5",
